<resources>
    <string name="app_name">Marcou</string>
    <string name="label_welcome">Bienvenue!</string>
    <string name="label_survey">Installer mon compte Marcou</string>
    <string name="label_skip">Plus tard</string>
    <string name="label_question">1ère question</string>
    <string name="hint_enter_name">Indiquer votre prénom</string>
    <string name="label_next">suivant</string>
    <string name="label_question_2">2ème question</string>
    <string name="content_question_2">Habitez-vous dans un appartement ou dans une maison?</string>
    <string name="label_house">Maison</string>
    <string name="label_flat">Appartement</string>
    <string name="title_activity_methods_overview" translatable="false">MethodsOverview</string>
    <string name="tab_1" translatable="false">Hello</string>
    <string name="content_question_1" translatable="false">Comment vous appelez-vous?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <!-- TODO: Remove or change this placeholder text -->


</resources>
