<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".survey.Survey_1">

    <TextView
            android:text="@string/label_question_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/textView7"
            android:layout_marginTop="200dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.493" app:layout_constraintVertical_bias="0.991"/>
    <TextView
            android:text="@string/content_question_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:textAppearance="@style/TextAppearance.AppCompat" android:textSize="30sp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100dp"/>
    <Button
            android:text="@string/label_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button4"
            android:onClick="nextStep"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroup" android:layout_marginTop="51dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7" android:layout_marginEnd="149dp"
            app:layout_constraintEnd_toEndOf="@+id/textView7">
        <RadioButton
                android:text="@string/label_house"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="490dp"
                tools:layout_editor_absoluteX="149dp" android:id="@+id/radioButton2"/>
        <RadioButton
                android:text="@string/label_flat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="418dp"
                tools:layout_editor_absoluteX="149dp" android:id="@+id/radioButton"/>
    </RadioGroup>
</android.support.constraint.ConstraintLayout>