<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBottomNavigationActiveColored"
        tools:context=".survey.StartSurvery">

    <TextView
            android:text="@string/label_welcome"
            android:layout_width="208dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:layout_marginTop="67dp"
            android:layout_marginBottom="383dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/button2" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:textSize="30sp" android:textAlignment="center"/>
    <Button
            android:text="@string/label_survey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:onClick="startSurvey"
            app:layout_constraintTop_toBottomOf="@+id/textView5" android:layout_marginBottom="30dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/button3"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.498"/>
    <Button
            android:text="@string/label_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3"
            app:layout_constraintStart_toStartOf="@+id/button2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2" android:layout_marginBottom="75dp"
            app:layout_constraintEnd_toEndOf="@+id/button2"/>
    <pl.droidsonroids.gif.GifImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/splash"

            android:id="@+id/gifImageView"/>
    <TextView
            android:text="Afin d'installer votre compte Marcou, il nous faut quelques informations concernant votre ménage."
            android:layout_width="305dp"
            android:layout_height="99dp"
            android:id="@+id/textView8" android:textSize="18sp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/textView5" android:layout_marginBottom="240dp"
            app:layout_constraintBottom_toTopOf="@+id/button2"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
</android.support.constraint.ConstraintLayout>